Quorum/Library/Tests/Inheritance/Pass/DTemplated.quorum
use CTemplated

class DTemplated<Type3> is CTemplated<Type3>
end