Quorum/Library/Tests/Inheritance/Fail/TemplateA.quorum
use TemplateB
use TemplateD

class TemplateA<T, Z> is TemplateB<T>, TemplateD<Z> 
end